resolved layout shift in toggle

--- a/src/app/accounts/admin/components/work-specialization/work-specialization.component.css
+++ b/src/app/accounts/admin/components/work-specialization/work-specialization.component.css
@@ -55,6 +55,10 @@ label:not(.visibly-hidden) {
   padding-top: 30px;
 }
 
+form {
+  margin-bottom: 60px;
+}
+
 .buttons {
   display: flex;
   gap: 40px;
